manifests/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /data
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config-pvc # We'll define this below
      - name: media
        persistentVolumeClaim:
          claimName: nfs-media-pvc # Your existing bound PVC!
