manifests/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  ports:
  - port: 7878
    targetPort: 7878
  selector:
    app: radarr
