manifests/radarr/radarr-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /data
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config-pvc # We'll define this below
      - name: media
        persistentVolumeClaim:
          claimName: nfs-media-pvc # Your existing bound PVC!
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  ports:
  - port: 7878
    targetPort: 7878
  selector:
    app: radarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: movies.smeyer.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
